sidebar spacing and height fix

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 .container-layout {
 	display: grid;
 	grid-template-columns: clamp(250px, 25%, 80%) 1fr;
-	grid-template-rows: repeat(4, 1fr);
 }
 
 /* DASHBOARD AND SIDEBAR */
@@ -37,8 +36,8 @@
 	font-size: 1.8rem;
 	color: white;
 	display: flex;
-	margin-left: 25px;
-	margin-top: 20px;
+	margin: 25px;
+	margin-bottom: 35px;
 	gap: 10px;
 }
 .dashboard-item-container,
@@ -49,6 +48,7 @@
 
 .dashboard-item-container-2 {
 	margin-bottom: 700px;
+	margin-top: 75px;
 }
 
 ul {
@@ -62,7 +62,7 @@ ul {
 .sidebar {
 	background-color: #38bdf8;
 	display: grid;
-	grid-row: 1 / span 4;
+
 	padding: 18px;
 	height: 100vh;
 }
